# golem-gw-client

./: Cargo.toml  README.md  swagger.yaml
docs/: DefaultApi.md  Event.md  Message.md  Resource.md  Subscription.md  SubscriptionStatus.md  SubscriptionStatusSubtaskStats.md  Subtask.md  SubtaskDockerImages.md  SubtaskResult.md  SubtaskVerification.md  Task.md
examples/: test.rs
src/: lib.rs
src/apis/: client.rs  configuration.rs  default_api.rs  mod.rs  request.rs
src/models/: event.rs  message.rs  mod.rs  resource.rs  subscription.rs  subscription_status.rs  subscription_status_subtask_stats.rs  subtask.rs  subtask_docker_images.rs  subtask_result.rs  subtask_verification.rs  task.rs  task_type.rs
