[package]
name = "golem_gw_api"
version = "1.2.0"
authors = ["OpenAPI Generator team and contributors"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
hyper = "0.12"
serde_yaml = "0.7"
base64 = "~0.7.0"
futures = "0.1.23"
failure="0.1.5"

[dev-dependencies]
tokio-core = "*"
